Update MainController.java